<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/listadeprofesor"

    >

    <ImageView
        android:id="@+id/imagenTeacher"
        android:layout_width="111dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView

        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imagenTeacher"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imagenTeacher"
        app:layout_constraintTop_toBottomOf="@+id/Nombre" />

    <ImageView
        android:id="@+id/starCalifica"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/Nombre"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>