<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/fondo"


    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:scrollbars="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logoapp"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/txtEmaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/txtPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="32dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btnlogin"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btnregister"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>