<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherRegister"
    android:background="@mipmap/fondo"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logoapp"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/txtFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="name"
                android:ems="10"
                android:focusable="auto"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"/>

            <EditText
                android:id="@+id/txtLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/lastname"
                tools:ignore="TextContrastCheck"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"/>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"/>

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"/>

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:drawablePadding="12dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:textAlignment="center"
                android:background="@drawable/style_spinner"

                />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:textAlignment="center"
                android:background="@drawable/style_spinner"

                />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:textAlignment="center"
                android:background="@drawable/style_spinner"

                />

            <Button
                android:id="@+id/btnSaved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btnregister"/>
















        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>