<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/fondo"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".social">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="start"
                    android:orientation="horizontal">

                    <!--<ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars"
                        android:contentDescription="@string/logo"/>-->

                </LinearLayout>
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imgProfileCircle"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/ic_launcher"
                     android:layout_gravity="center"
                     android:layout_marginTop="-35dp"
                     />

                <EditText
                    android:id="@+id/txtNameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="50dp"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

               <!-- <EditText
                    android:id="@+id/txtPhoneProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="50dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="text"

                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="44dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_weight="1"
                            android:text="@string/saldoText"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtBalanceProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="bottom"
                    android:text="@string/updateAccount"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    />


            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity = "start"
        android:fitsSystemWindows="true"

        />


</androidx.drawerlayout.widget.DrawerLayout>